<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_accountInfo"
            android:icon="@drawable/account_info"
            android:title="@string/account_info_title" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/about"
            android:title="@string/about" />
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/feedback"
            android:title="@string/feedback" />
        <item
            android:id="@+id/nav_legal"
            android:icon="@drawable/legal"
            android:title="@string/legal" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings"
            android:title="@string/settings" />
    </group>

    <item
        android:title="">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/logout"
                android:title="@string/logout"/>
        </menu>

    </item>
</menu>