<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.supportActionBarFragments.ContactSupportFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/contact_support_title" />

    <Button
        android:id="@+id/emailButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginTop="140dp"
        android:layout_marginStart="-75dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/email" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginTop="150dp"
        android:layout_marginStart="130dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/company_email" />

    <Button
        android:id="@+id/phoneButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginTop="190dp"
        android:layout_marginStart="-74dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/phone" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginTop="200dp"
        android:layout_marginStart="130dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/company_phonenumber" />

</FrameLayout>