<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginbg"
    android:id="@+id/nav_feedback">

    <LinearLayout
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/etName"
            android:hint="@string/name"
            android:textStyle="bold"
            android:inputType="textPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/etPhone"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/etEmail"
            android:hint="@string/emailv2"
            android:textStyle="bold"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/etComment"
            android:hint="@string/your_comment"
            android:background="@drawable/semirounded_corners"
            android:minLines="4"
            android:textStyle="bold"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine" />

        <RatingBar
            android:id="@+id/ratingBar"
            android:numStars="5"
            android:stepSize="0.5"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"/>

        <Button
            android:id="@+id/btnSubmit"
            android:text="@string/submit_feedback"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"/>
    </LinearLayout>
</ScrollView>
