<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/shareLayoutRoot"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/loginbg"
    android:padding="32dp"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:minHeight="0dp"
    android:clipChildren="true"
    android:clipToPadding="true">

    <TextView
        android:id="@+id/lifetimeCO2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CarbonDioxideConverted"
        android:textColor="#222222"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginTop="264dp" />

    <TextView
        android:id="@+id/highestAchievement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/achievement"
        android:textColor="#444444"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        android:layout_marginTop="00dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:gravity="end"
        android:orientation="horizontal"
        android:paddingEnd="16dp">

        <TextView
            android:id="@+id/appWatermark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phytoplankton_air_systems"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/marsh_depth"
            android:layout_marginEnd="8dp" />

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/algaerithms"
            android:contentDescription="@string/app_logo" />
    </LinearLayout>

</LinearLayout>