<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/registrationbg"
    android:id="@+id/registration_name"
    tools:context=".ui.registration.RegistrationNameFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="@color/forest_green"
            android:textStyle="bold"
            android:layout_marginLeft="5dp"
            android:text="@string/display_name"
            android:textSize="30dp" />

        <EditText
            android:id="@+id/registration_diplayFirstName_editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:background="@drawable/semirounded_corners"
            android:padding="10dp"
            android:ems="15"
            android:hint="@string/first_name"
            android:textColorHint="@color/grey"
            android:textColor="@color/forest_green"
            android:inputType="text"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/registration_displayLastName_editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:background="@drawable/semirounded_corners"
            android:padding="10dp"
            android:ems="15"
            android:hint="@string/last_name"
            android:inputType="text"
            android:textColorHint="@color/grey"
            android:textColor="@color/forest_green"
            android:textSize="20sp" />

        <Button
            android:id="@+id/registration_display_continueButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corners"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:ems="10"
            android:text="@string/continue_button" />

    </LinearLayout>

</RelativeLayout>